# memcached

./: Makefile.am  debug.h  howtos  items.c  kvclient.c  kvclient.h  memcached.c  memcached.h  slabs.c  storage_rocksdb.c  storage_rocksdb.h  thread.c  util.c  util.h
scripts/: memcachedssdcache.init
